Fixed Spacing
After creating the footer, we had to set the body margin to 0, so fixed some margins in the nav-bar and the CTA positioning

--- a/css/courseIDetail.css
+++ b/css/courseIDetail.css
@@ -136,7 +136,7 @@
   
   /* -------------- Call to Action Section Styles -------------- */
   #CTAsection {
-    padding: 50px 0;
+    padding: 1% 0 10%;
   }
   
   .CTAcontainer {
